commit-v02-inclusão de vídeos

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -655,6 +655,12 @@ body, #container-wrap { background:#54ba3f; }
 	top:510px !important;
 }
 
+#item5046 {
+	width:600px !important;
+	height:342px !important;
+	top:50px !important;
+}
+
 @keyframes entrada-direita-854 {
 	0% {transform:translate(0px,0px);}
 	100% {transform:translate(-556px,0px);}
@@ -1018,6 +1024,63 @@ body, #container-wrap { background:#54ba3f; }
 #item1430 {
 	transform-origin:49.992% 49.989%;
 	-webkit-transform-origin:49.992% 49.989%;
+}
+
+#item5095 {
+	width:65px !important;
+	height:62px !important;
+}
+
+#item5093 {
+	width:65px !important;
+	height:62px !important;
+	left:48px !important;
+	top:960px !important;
+}
+
+#item5104 {
+	width:620px !important;
+	height:342px !important;
+	left:-618px !important;
+	top:50px !important;
+}
+
+@keyframes entrada-esquerda-5104 {
+	0% {transform:translate(0px,0px);}
+	100% {transform:translate(618px,0px);}
+}
+@-webkit-keyframes entrada-esquerda-5104 {
+	0% {-webkit-transform:translate(0px,0px);}
+	100% {-webkit-transform:translate(618px,0px);}
+}
+#item5104 {
+	transform-origin:100% 50%;
+	-webkit-transform-origin:100% 50%;
+}
+
+@keyframes fadein-5106 {
+	0% {opacity:0;}
+	100% {opacity:1;}
+}
+@-webkit-keyframes fadein-5106 {
+	0% {opacity:0;}
+	100% {opacity:1;}
+}
+#item5106 {
+	transform-origin:49.992% 49.989%;
+	-webkit-transform-origin:49.992% 49.989%;
+}
+
+#item5109 {
+	width:50px !important;
+	height:50px !important;
+}
+
+#item5106 {
+	width:50px !important;
+	height:50px !important;
+	left:174px !important;
+	top:966px !important;
 }
 
 #item1525 {
@@ -2444,7 +2507,7 @@ body, #container-wrap { background:#54ba3f; }
 #item4189 {
 	width:540px !important;
 	left:30px !important;
-	top:248px !important;
+	top:228px !important;
 	min-height:60px !important;
 	direction:ltr;
 }
@@ -2596,6 +2659,30 @@ body, #container-wrap { background:#54ba3f; }
 	-webkit-transform-origin:49.992% 49.989%;
 }
 
+#item5075 {
+	width:65px !important;
+	height:53px !important;
+}
+
+#item5071 {
+	width:65px !important;
+	height:53px !important;
+	left:485px !important;
+	top:961px !important;
+}
+
+#item5068 {
+	width:65px !important;
+	height:53px !important;
+}
+
+#item5065 {
+	width:65px !important;
+	height:53px !important;
+	left:350px !important;
+	top:961px !important;
+}
+
 #item4823 {
 	width:600px !important;
 	height:1065px !important;
@@ -2640,40 +2727,38 @@ body, #container-wrap { background:#54ba3f; }
 	-webkit-transform-origin:0% 50%;
 }
 
-#item4921 {
-	width:600px !important;
-	top:51px !important;
-	min-height:134px !important;
+#item4948 {
+	width:540px !important;
+	left:30px !important;
+	top:523px !important;
+	min-height:30px !important;
+	direction:ltr;
 }
 
-#item4899 {
+#item5126 {
+	width:540px !important;
+	left:30px !important;
+	top:705px !important;
+	min-height:30px !important;
+	direction:ltr;
+}
+
+#item5120 {
+	width:600px !important;
+	height:342px !important;
+	top:155px !important;
+}
+
+#item4991 {
 	width:65px !important;
 	height:53px !important;
 }
 
-#item4896 {
+#item4988 {
 	width:65px !important;
 	height:53px !important;
 	left:485px !important;
 	top:961px !important;
-}
-
-#item4735 {
-	width:65px !important;
-	height:65px !important;
-}
-
-#item4738 {
-	width:65px !important;
-	top:65px !important;
-	min-height:14px !important;
-}
-
-#item4732 {
-	width:65px !important;
-	height:79px !important;
-	left:45px !important;
-	top:948px !important;
 }
 
 p.txt-end {
@@ -2765,15 +2850,6 @@ p.btn-apoio {
 	transform: skew(-10deg);
 }
 
-span.clique {
-	color:#FFF;
-	box-shadow: inset 0 0 100px 100px #55b940;
- 	padding-right: 70px;
-    padding-left: 70px;
-    padding-top: 15px;
-    padding-bottom: 12px;
-}
-
 p.txt {
 	font-weight:500;
 	font-family:Raleway;
@@ -2817,6 +2893,19 @@ p.tag-icon {
 	padding-top: 5px;
 }
 
+p.patrocinio {
+	font-weight:600;
+	font-family:Raleway;
+	font-size:18px;
+	line-height:18px;
+	color:#fff;
+	letter-spacing:0.200em;
+	direction:ltr;
+	margin-bottom:50px;
+	text-align:center;
+	transform: skew(-10deg);
+}
+
 p.menu {
 	font-weight:900;
 	font-family:Raleway;
@@ -2848,6 +2937,23 @@ p.foguete {
 	direction:ltr;
 	text-align:center;
 }
+span.pecas-foguete {
+	color:#FFF;
+	box-shadow: inset 0 0 100px 100px #55b940;
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-top: 4px;
+	padding-bottom: 8px;
+}
+
+span.clique {
+	color:#FFF;
+	box-shadow: inset 0 0 100px 100px #55b940;
+ 	padding-right: 70px;
+    padding-left: 70px;
+    padding-top: 15px;
+    padding-bottom: 12px;
+}
 
 p.exp-nome {
 	font-family:Raleway;
@@ -2855,6 +2961,7 @@ p.exp-nome {
 	line-height:24px;
 	color:#fff;
 	direction:ltr;
+	margin-top:5px;
 	text-align:right;
 }
 
@@ -2866,6 +2973,7 @@ p.exp-foguete {
 	color:#fff;
 	letter-spacing:0.200em;
 	direction:ltr;
+	margin-bottom:30px;
 	text-align:right;
 }
 
@@ -2877,19 +2985,34 @@ p.exp-cargo {
 	color:#ff4f00;
 	text-transform:uppercase;
 	direction:ltr;
-	hyphens:auto;
-	margin-top:25px;
-	text-align:right;
+}
+
+
+span.autoCharStyle1 {
+	font-size:19px;
+}
+
+span.foguete-apoio {
+	color:#FFF;
+	box-shadow: inset 0 0 100px 100px #6e6e6e;
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-top: 0px;
+	padding-bottom: 4px;
+}
+
+span.foguete-realiza {
+	color:#FFF;
+	box-shadow: inset 0 0 100px 100px #444444;
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-top: 0px;
+	padding-bottom: 4px;
 }
 
 span.pecas-foguete {
-	color:#FFF;
-	box-shadow: inset 0 0 100px 100px #55b940;
-	padding-right: 10px;
-	padding-left: 10px;
-	padding-top: 4px;
-	padding-bottom: 8px;
 }
+
 span.menu-foguete {
 }
 
