--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -2507,7 +2507,7 @@ body, #container-wrap { background:#54ba3f; }
 #item4189 {
 	width:540px !important;
 	left:30px !important;
-	top:228px !important;
+	top:248px !important;
 	min-height:60px !important;
 	direction:ltr;
 }
@@ -2994,7 +2994,7 @@ span.autoCharStyle1 {
 
 span.foguete-apoio {
 	color:#FFF;
-	box-shadow: inset 0 0 100px 100px #6e6e6e;
+	box-shadow: inset 0 0 100px 100px #aaa;
 	padding-right: 10px;
 	padding-left: 10px;
 	padding-top: 0px;
