v03-atualização expediente e menus internos

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -675,8 +675,8 @@ body, #container-wrap { background:#54ba3f; }
 }
 
 #item791 {
-	width:336px !important;
-	left:170px !important;
+	width:416px !important;
+	left:80px !important;
 	top:38px !important;
 	min-height:787px !important;
 	direction:ltr;
@@ -2910,7 +2910,19 @@ p.menu {
 	font-weight:900;
 	font-family:Raleway;
 	font-size:40px;
-	line-height:40px;
+	line-height:50px;
+	color:#fff;
+	letter-spacing:0.200em;
+	direction:ltr;
+	margin-bottom:60px;
+	text-align:center;
+	transform: skew(-10deg);
+}
+p.menu-pecas {
+	font-weight:900;
+	font-family:Raleway;
+	font-size:40px;
+	line-height:30px;
 	color:#fff;
 	letter-spacing:0.200em;
 	direction:ltr;
@@ -2937,6 +2949,16 @@ p.foguete {
 	direction:ltr;
 	text-align:center;
 }
+p.foguete-peq {
+	font-weight:900;
+	font-family:Raleway;
+	font-size:50px;
+	line-height:60px;
+	color:#fff;
+	letter-spacing:0.100em;
+	direction:ltr;
+	text-align:center;
+}
 span.pecas-foguete {
 	color:#FFF;
 	box-shadow: inset 0 0 100px 100px #55b940;
@@ -2957,11 +2979,10 @@ span.clique {
 
 p.exp-nome {
 	font-family:Raleway;
-	font-size:24px;
+	font-size:18px;
 	line-height:24px;
 	color:#fff;
 	direction:ltr;
-	margin-top:5px;
 	text-align:right;
 }
 
@@ -2978,13 +2999,15 @@ p.exp-foguete {
 }
 
 p.exp-cargo {
-	font-weight:bold;
+	font-weight:900;
 	font-family:Raleway;
-	font-size:18px;
+	font-size:15px;
 	line-height:18px;
 	color:#ff4f00;
 	text-transform:uppercase;
 	direction:ltr;
+	text-align:right;
+	margin-top: 10px;
 }
 
 
